# succuba

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/succuba/: __init__.py  __main__.py
src/succuba/core/: engine.py  tts_engine.py  video_builder.py
src/succuba/utils/: processor.py
